# soundgarden

./: .gitignore  README.md  SUBMODULE_SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: bridge.ts  doc.test.ts  doc.ts  id.test.ts  id.ts  main.ts  modmode.ts  overlay.test.ts  overlay.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  secrets.rs
