# soundgarden — Tauri shell (own crate, NOT part of the EchoWarrior workspace).
#
# Thin: it only shells out to the `audio` CLI and reads a Gemini key at runtime.
# It does not depend on the game crate, so the app and game evolve independently.

# Stand alone: never get absorbed into a parent Cargo workspace (the game repo).
[workspace]

[package]
name = "soundgarden"
version = "0.1.0"
description = "EchoWarrior audio studio (Tauri shell)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
keyring = "3"
serde_json = "1"
# rustls-tls avoids a system OpenSSL dependency; Tauri v2 runs async commands
# on its own runtime, tokio only provides the reqwest driver.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
